Add super admin and advanced reports
